spec updated on 2020-08-27 (#28)
* add workaround for #27

* spec updated on 2020-08-27
