# bus/v2/models/service_d_t_o_version2_bus_bus_station_name.go
@@ -1,175 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// ServiceDTOVersion2BusBusStationName BusStationName
-//
-// 站名碼資料型別
-//
-// swagger:model Service.DTO.Version2.Bus.BusStationName
-type ServiceDTOVersion2BusBusStationName struct {
-
-	// 站名碼代碼
-	// Required: true
-	StationNameID *string `json:"StationNameID"`
-
-	// NameType
-	//
-	// 站名碼名稱
-	// Required: true
-	StationNameName *ServiceDTOVersion2BaseNameType `json:"StationNameName"`
-
-	// PointType
-	//
-	// 站名碼位置
-	// Required: true
-	StationNamePosition *ServiceDTOVersion2BasePointType `json:"StationNamePosition"`
-
-	// 站名碼唯一識別代碼，規則為 {業管機關簡碼} + {StationID}，其中 {業管機關簡碼} 可於Authority API中的AuthorityCode欄位查詢
-	// Required: true
-	StationNameUID *string `json:"StationNameUID"`
-
-	// DateTime
-	//
-	// 資料更新日期時間(ISO8601格式:yyyy-MM-ddTHH:mm:sszzz)
-	// Required: true
-	UpdateTime *string `json:"UpdateTime"`
-
-	// 資料版本編號
-	// Required: true
-	VersionID *int32 `json:"VersionID"`
-}
-
-// Validate validates this service d t o version2 bus bus station name
-func (m *ServiceDTOVersion2BusBusStationName) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateStationNameID(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateStationNameName(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateStationNamePosition(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateStationNameUID(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateUpdateTime(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateVersionID(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *ServiceDTOVersion2BusBusStationName) validateStationNameID(formats strfmt.Registry) error {
-
-	if err := validate.Required("StationNameID", "body", m.StationNameID); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *ServiceDTOVersion2BusBusStationName) validateStationNameName(formats strfmt.Registry) error {
-
-	if err := validate.Required("StationNameName", "body", m.StationNameName); err != nil {
-		return err
-	}
-
-	if m.StationNameName != nil {
-		if err := m.StationNameName.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("StationNameName")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *ServiceDTOVersion2BusBusStationName) validateStationNamePosition(formats strfmt.Registry) error {
-
-	if err := validate.Required("StationNamePosition", "body", m.StationNamePosition); err != nil {
-		return err
-	}
-
-	if m.StationNamePosition != nil {
-		if err := m.StationNamePosition.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("StationNamePosition")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *ServiceDTOVersion2BusBusStationName) validateStationNameUID(formats strfmt.Registry) error {
-
-	if err := validate.Required("StationNameUID", "body", m.StationNameUID); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *ServiceDTOVersion2BusBusStationName) validateUpdateTime(formats strfmt.Registry) error {
-
-	if err := validate.Required("UpdateTime", "body", m.UpdateTime); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *ServiceDTOVersion2BusBusStationName) validateVersionID(formats strfmt.Registry) error {
-
-	if err := validate.Required("VersionID", "body", m.VersionID); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *ServiceDTOVersion2BusBusStationName) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *ServiceDTOVersion2BusBusStationName) UnmarshalBinary(b []byte) error {
-	var res ServiceDTOVersion2BusBusStationName
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
