# oas.tourism.v2.json
@@ -132,13 +132,6 @@
               "LienchiangCounty"
             ],
             "x-enum": {
-              "YilanCounty": "宜蘭縣",
-              "Taoyuan": "桃園市",
-              "Keelung": "基隆市",
-              "ChiayiCounty": "嘉義縣",
-              "TaitungCounty": "臺東縣",
-              "Taipei": "臺北市",
-              "Chiayi": "嘉義市",
               "LienchiangCounty": "連江縣",
               "HsinchuCounty": "新竹縣",
               "KinmenCounty": "金門縣",
@@ -146,14 +139,21 @@
               "MiaoliCounty": "苗栗縣",
               "NantouCounty": "南投縣",
               "Taichung": "臺中市",
+              "YilanCounty": "宜蘭縣",
+              "Taoyuan": "桃園市",
               "NewTaipei": "新北市",
+              "Keelung": "基隆市",
+              "Chiayi": "嘉義市",
               "Kaohsiung": "高雄市",
               "HualienCounty": "花蓮縣",
               "PingtungCounty": "屏東縣",
               "ChanghuaCounty": "彰化縣",
               "YunlinCounty": "雲林縣",
               "Hsinchu": "新竹市",
-              "PenghuCounty": "澎湖縣"
+              "PenghuCounty": "澎湖縣",
+              "ChiayiCounty": "嘉義縣",
+              "TaitungCounty": "臺東縣",
+              "Taipei": "臺北市"
             }
           },
           {
@@ -339,9 +339,6 @@
               "LienchiangCounty"
             ],
             "x-enum": {
-              "Taoyuan": "桃園市",
-              "ChanghuaCounty": "彰化縣",
-              "HualienCounty": "花蓮縣",
               "TaitungCounty": "臺東縣",
               "NewTaipei": "新北市",
               "Taipei": "臺北市",
@@ -349,6 +346,8 @@
               "PenghuCounty": "澎湖縣",
               "PingtungCounty": "屏東縣",
               "Taichung": "臺中市",
+              "Taoyuan": "桃園市",
+              "HualienCounty": "花蓮縣",
               "YilanCounty": "宜蘭縣",
               "Chiayi": "嘉義市",
               "Tainan": "臺南市",
@@ -360,6 +359,7 @@
               "NantouCounty": "南投縣",
               "ChiayiCounty": "嘉義縣",
               "KinmenCounty": "金門縣",
+              "ChanghuaCounty": "彰化縣",
               "YunlinCounty": "雲林縣"
             }
           },
@@ -546,10 +546,6 @@
               "LienchiangCounty"
             ],
             "x-enum": {
-              "YunlinCounty": "雲林縣",
-              "Taipei": "臺北市",
-              "Keelung": "基隆市",
-              "Kaohsiung": "高雄市",
               "Taoyuan": "桃園市",
               "Taichung": "臺中市",
               "YilanCounty": "宜蘭縣",
@@ -567,7 +563,11 @@
               "PenghuCounty": "澎湖縣",
               "ChiayiCounty": "嘉義縣",
               "NewTaipei": "新北市",
-              "KinmenCounty": "金門縣"
+              "YunlinCounty": "雲林縣",
+              "Taipei": "臺北市",
+              "KinmenCounty": "金門縣",
+              "Keelung": "基隆市",
+              "Kaohsiung": "高雄市"
             }
           },
           {
@@ -753,9 +753,6 @@
               "LienchiangCounty"
             ],
             "x-enum": {
-              "ChanghuaCounty": "彰化縣",
-              "NantouCounty": "南投縣",
-              "Taoyuan": "桃園市",
               "KinmenCounty": "金門縣",
               "Hsinchu": "新竹市",
               "PingtungCounty": "屏東縣",
@@ -764,6 +761,7 @@
               "Tainan": "臺南市",
               "YilanCounty": "宜蘭縣",
               "HualienCounty": "花蓮縣",
+              "NantouCounty": "南投縣",
               "Chiayi": "嘉義市",
               "Keelung": "基隆市",
               "Taipei": "臺北市",
@@ -774,7 +772,9 @@
               "ChiayiCounty": "嘉義縣",
               "Taichung": "臺中市",
               "YunlinCounty": "雲林縣",
-              "TaitungCounty": "臺東縣"
+              "ChanghuaCounty": "彰化縣",
+              "TaitungCounty": "臺東縣",
+              "Taoyuan": "桃園市"
             }
           },
           {
@@ -3608,7 +3608,6 @@
         "StopName",
         "StopSequence",
         "StopPosition",
-        "StationNameID",
         "StationGroupID"
       ],
       "type": "object",
@@ -3644,10 +3643,6 @@
         },
         "StationID": {
           "description": "站牌所屬的站位ID",
-          "type": "string"
-        },
-        "StationNameID": {
-          "description": "站牌所屬的站名碼ID",
           "type": "string"
         },
         "StationGroupID": {
